// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns the expected query for a single species code 1`] = `
"SELECT
  SHORT_DESCRIPTION PURPOSE_SPECIES_DESC,
  CODE PURPOSE_SPECIES_CODE
FROM
  AHBRP.REF_DATA_SET,
  AHBRP.REF_DATA_CODE,
  AHBRP.REF_DATA_CODE_DESC
WHERE
  CODE IN ('CTT')
  AND
  REF_DATA_SET_NAME= 'BCF_ANIMAL_SPECIES'
  AND
  REF_DATA_SET.EFFECTIVE_TO_DATE IS NULL
  AND
  REF_DATA_SET.REF_DATA_SET_PK=REF_DATA_CODE.REF_DATA_SET_PK
  AND
  REF_DATA_CODE.EFFECTIVE_TO_DATE = '31-DEC-9999'
  AND
  REF_DATA_CODE.REF_DATA_CODE_PK=REF_DATA_CODE_DESC.REF_DATA_CODE_PK
  AND
  LANGUAGE_CODE='ENG'
"
`;

exports[`returns the expected query for multiple species codes 1`] = `
"SELECT
  SHORT_DESCRIPTION PURPOSE_SPECIES_DESC,
  CODE PURPOSE_SPECIES_CODE
FROM
  AHBRP.REF_DATA_SET,
  AHBRP.REF_DATA_CODE,
  AHBRP.REF_DATA_CODE_DESC
WHERE
  CODE IN ('CTT', 'Sheep', 'Pigs')
  AND
  REF_DATA_SET_NAME= 'BCF_ANIMAL_SPECIES'
  AND
  REF_DATA_SET.EFFECTIVE_TO_DATE IS NULL
  AND
  REF_DATA_SET.REF_DATA_SET_PK=REF_DATA_CODE.REF_DATA_SET_PK
  AND
  REF_DATA_CODE.EFFECTIVE_TO_DATE = '31-DEC-9999'
  AND
  REF_DATA_CODE.REF_DATA_CODE_PK=REF_DATA_CODE_DESC.REF_DATA_CODE_PK
  AND
  LANGUAGE_CODE='ENG'
"
`;
